Fixed invisible delete button

--- a/src/sass/_core.sass
+++ b/src/sass/_core.sass
@@ -9,6 +9,10 @@ $scheme-main: #14151f	//Main background
 $scheme-main-bis: #1f202e	//Article background
 $scheme-main-ter: #282a3e	//Options background
 
+$scheme-invert: $white
+$scheme-invert-bis: $white-bis
+$scheme-invert-ter: $white-ter
+
 $border-light: $scheme-main
 
 
@@ -43,6 +47,10 @@ $loading-background: $scheme-main-bis
 
 $dropdown-item-hover-color: $white
 $dropdown-item-hover-background-color: $primary
+
+$notification-background-color: $dark
+
+$modal-background-background-color: bulmaRgba($scheme-main, 0.86)
 
 $colors: ("white": ($white, $black), "black": ($black, $white),	"light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "info": ($info, $info-invert),	"success": ($success, $success-invert),	"warning": ($warning, $warning-invert),	"danger": ($danger, $danger-invert))
 
